@@ -456,6 +456,14 @@ serdisp_device=/dev/ppi0
 # Inverted: inverts the pixels [default: no; legal: yes, no]
 #x11_Inverted=no
 
+# --- picolcdgfx options ---
+
+# Time in ms for usb_read to wait on a key press. [default: 125; legal: >0]
+#picolcdgfx_KeyTimeout=125
+
+# Inverted: Inverts the pixels. [default: no; legal: yes or no]
+#picolcdgfx_Inverted=no
+
 
 
 ## glcdlib meta driver for graphical LCDs ##
