@@ -24,6 +24,7 @@ int glcd_serdisp_init(Driver *drvthis);
 #endif
 #ifdef HAVE_LIBUSB
 int glcd2usb_init(Driver *drvthis);
+int glcd_picolcdgfx_init(Driver *drvthis);
 #endif
 #ifdef HAVE_LIBX11
 int glcd_x11_init(Driver *drvthis);
@@ -36,6 +37,7 @@ int glcd_x11_init(Driver *drvthis);
 #define GLCD_CT_SERDISP		3
 #define GLCD_CT_GLCD2USB	4
 #define GLCD_CT_X11		5
+#define GLCD_CT_PICOLCDGFX	6
 
 /** Structure linking symbolic names to initialization routines */
 typedef struct ConnectionMapping {
@@ -62,6 +64,7 @@ static const ConnectionMapping connectionMapping[] = {
 #endif
 #ifdef HAVE_LIBUSB
 	{"glcd2usb", GLCD_CT_GLCD2USB, glcd2usb_init},
+	{"picolcdgfx", GLCD_CT_PICOLCDGFX, glcd_picolcdgfx_init},
 #endif
 #ifdef HAVE_LIBX11
 	{"x11", GLCD_CT_X11, glcd_x11_init},
